Added vim like pane switch bindings to tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,9 @@
+#Run tmux source-file /../../.tmux.conf to reload
+
+#Set 256 color support
 set -g default-terminal "screen-256color"
 
-#Run tmux source-file /../../.tmux.conf to reload
+#Bind prefix
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
@@ -14,3 +17,10 @@ unbind '"'
 bind s split-window
 unbind %
 bind v split-window -h
+
+#Bind Pane Navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
