Tmux - current window gighlight.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,3 +24,5 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Highlight active window in status bar
+set-window-option -g window-status-current-bg red
