Added tmux-ressurect and tmux-continuum plugins as submodules for session restoring and saving.New extract function in .bashrc and more tmux bindings!

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,9 +14,11 @@ bind r source-file ~/.tmux.conf
 
 #Bind v and s to splitting
 unbind '"'
-bind s split-window
+#bind s
+bind "-" split-window
 unbind %
-bind v split-window -h
+#bind v
+bind "|" split-window -h
 
 #Bind Pane Navigation
 bind h select-pane -L
@@ -24,5 +26,17 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+#Bind Pane Resizing
+bind -r H resize-pane -L
+bind -r J resize-pane -D
+bind -r K resize-pane -U
+bind -r L resize-pane -R
+
 # Highlight active window in status bar
 set-window-option -g window-status-current-bg red
+
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+run-shell ~/.tmux/tmux-continuum/continuum.tmux
+
+# Restore tmux sessions on starting it again
+set -g @continuum-restore 'on'
