Tmux status bar customization, very stupid one..

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,8 +32,13 @@ bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -R
 
+# Satusbar customization
+
 # Highlight active window in status bar
 set-window-option -g window-status-current-bg red
+
+# Set status bar background
+set status-bg black
 
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
 run-shell ~/.tmux/tmux-continuum/continuum.tmux
