--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -R
 
-# Satusbar customization
+# Status bar customization
 
 # Highlight active window in status bar
 set-window-option -g window-status-current-bg red
@@ -40,6 +40,7 @@ set-window-option -g window-status-current-bg red
 # Set status bar background
 set status-bg black
 
+# Run tmux plugins
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
 run-shell ~/.tmux/tmux-continuum/continuum.tmux
 
