Added urxvt configuration adn fixed bug in tmux set status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ bind -r L resize-pane -R
 set-window-option -g window-status-current-bg red
 
 # Set status bar background
-set status-bg black
+set -g status-bg green
 
 # Run tmux plugins
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
