Added git aliases
Extended git config file with aliases for common git commands.

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,3 +8,15 @@
 	interactive = auto
 	ui = true
 	pager = true
+[alias]
+	a = add
+	b = branch
+	c = commit
+	d = diff
+	g = grep
+	l = log
+	m = merge
+	o = checkout
+	p = pull
+	r = remote
+	s = status
