Tmux mouse and copying improvements.
New workplace improvements. Scrolling with mouse and yanking to system clipboard in tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,15 @@ bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -R
 
+#Enable mouse scrolling
+set -g mouse on
+
+#Enable vi keys 
+setw -g mode-keys vi
+
+#Enable copying using xlip on linux only!
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
 # Status bar customization
 
 # Highlight active window in status bar
