--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	email = nerijus.vilcinskas@gmail.com
-	name = kaktusas2598
+	name = "Nerijus Vilčinskas"
 [color]
 	diff = auto
 	status = auto
