--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,6 +34,10 @@ bind -r L resize-pane -R
 
 #Enable mouse scrolling
 set -g mouse on
+# Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
 
 #Enable vi keys 
 setw -g mode-keys vi
