--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ bind C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
+# don't rename windows automatically
+set-option -g allow-rename off
+
 #Bind v and s to splitting
 unbind '"'
 #bind s
