Updating tmux config for newer version

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,15 +38,20 @@ bind -r L resize-pane -R
 #Enable mouse scrolling
 set -g mouse on
 # Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+#set -g mouse-select-window on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
 
-#Enable vi keys 
+#Enable vi keys
 setw -g mode-keys vi
 
 #Enable copying using xlip on linux only!
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+# DOES NOT work on new Dell laptop
+#bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
+# Neovim recommendations
+set-option -sg escape-time 10
+set-option -g focus-events on
 
 # Status bar customization
 
@@ -62,3 +67,5 @@ run-shell ~/.tmux/tmux-continuum/continuum.tmux
 
 # Restore tmux sessions on starting it again
 set -g @continuum-restore 'on'
+
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
