Cleanup tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,12 @@
 #Set 256 color support
 set -g default-terminal "screen-256color"
 
-#Bind prefix
+#Bind prefix to Ctrl+a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# force a reload of the config file
+# force a reload of the config file using Ctrl-A + r
 unbind r
 bind r source-file ~/.tmux.conf
 
@@ -35,12 +35,8 @@ bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -R
 
-#Enable mouse scrolling
+#Enable mouse
 set -g mouse on
-# Enable mouse control (clickable windows, panes, resizable panes)
-#set -g mouse-select-window on
-#set -g mouse-select-pane on
-#set -g mouse-resize-pane on
 
 #Enable vi keys
 setw -g mode-keys vi
@@ -53,13 +49,20 @@ setw -g mode-keys vi
 set-option -sg escape-time 10
 set-option -g focus-events on
 
+# Activity notifications
+setw -g monitor-activity on
+setw -g visual-activity on
+
 # Status bar customization
 
 # Highlight active window in status bar
-set-window-option -g window-status-current-bg red
+#set-window-option -g window-status-current-bg red
 
 # Set status bar background
 set -g status-bg green
+
+# Increase refresh status interval
+set -g status-interval 5
 
 # Run tmux plugins
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
