--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,3 +72,6 @@ run-shell ~/.tmux/tmux-continuum/continuum.tmux
 set -g @continuum-restore 'on'
 
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
+
+# List of TPM plugins
+set -g @plugin 'tmux-plugins/tpm'
