Added gruvbox theme for tmux, get ready for some plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,7 @@ setw -g mode-keys vi
 #Enable copying using xlip on linux only!
 # DOES NOT work on new Dell laptop
 #bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
 
 # Neovim recommendations
 set-option -sg escape-time 10
@@ -59,7 +60,9 @@ setw -g visual-activity on
 #set-window-option -g window-status-current-bg red
 
 # Set status bar background
-set -g status-bg green
+#set -g status-bg green # Original
+set -g status-bg colour237 # From gruvbox
+
 
 # Increase refresh status interval
 set -g status-interval 5
@@ -71,7 +74,10 @@ run-shell ~/.tmux/tmux-continuum/continuum.tmux
 # Restore tmux sessions on starting it again
 set -g @continuum-restore 'on'
 
-bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
-
 # List of TPM plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'egel/tmux-gruvbox' # Gruvbox color theme
+set -g @tmux-gruvbox 'dark' # or 'light'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
