--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,16 +67,14 @@ set -g status-bg colour237 # From gruvbox
 # Increase refresh status interval
 set -g status-interval 5
 
-# Run tmux plugins
-run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
-run-shell ~/.tmux/tmux-continuum/continuum.tmux
-
-# Restore tmux sessions on starting it again
-set -g @continuum-restore 'on'
-
 # List of TPM plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'egel/tmux-gruvbox' # Gruvbox color theme
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Plugin options
+set -g @continuum-restore 'on' # Restore tmux sessions on starting it again
 set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
