--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,18 @@
-#$if Bash
-  #--Ignore Case for Completion
-  set completion-ignore-case on
-  #--
-#$endif
+$include /etc/inputrc
+set editing-mode vi
+
+$if mode=vi
+set completion-ignore-case On
+set show-mode-in-prompt off
+# set vi-ins-mode-string \1\e[6 q\2
+# set vi-cmd-mode-string \1\e[2 q\2
+
+set keymap vi-command
+Control-l: clear-screen
+Control-a: beginning-of-line
+
+set keymap vi-insert
+Control-l: clear-screen
+Control-a: beginning-of-line
+
+$endif
