--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,6 +35,12 @@ bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -R
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+# Ensure window index numbers get reordered on delete.
+set-option -g renumber-windows on
+
 #Enable mouse
 set -g mouse on
 
