--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,8 +3,8 @@
 include current-theme.conf
 # END_KITTY_THEME
 
-font_family      UbuntuMono Nerd Font Bold
-bold_font        Bold
+font_family      Ubuntu Mono Bold Nerd Font Complete Mono
+bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
@@ -17,8 +17,12 @@ remember_window_size  yes
 background_opacity 0.8
 dynamic_background_opacity yes
 
+ map kitty_mod+a>m set_background_opacity +0.1
 
 allow_hyperlinks yes
+detect_urls yes
+
+hide_window_decorations yes
 
 term xterm-256color
 
