Set tmux ressurect keybinds explicitily

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,6 +81,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # Plugin options
 set -g @continuum-restore 'on' # Restore tmux sessions on starting it again
 set -g @tmux-gruvbox 'dark' # or 'light'
+set -g @resurrect-save 'C-s'
+set -g @resurrect-restore 'C-r'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
