--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -13,14 +13,45 @@ font:
     family: UbuntuMono Nerd Font Mono
     style: Bold
   bold:
-      family: UbuntuMono Nerd Font Mono
-      style: Bold
-  #italic:
-      #family: Ubuntu Mono Nerd Font
-      #style: Italic
+    family: UbuntuMono Nerd Font Mono
+    style: Bold
+    #italic:
+    #family: Ubuntu Mono Nerd Font
+    #style: Italic
 
   size: 14.0
 
   offset:
     x: 0
     y: 0
+
+colors:
+  # Default colors
+  primary:
+    # hard contrast: background = '#1d2021'
+    background: '#282828'
+    # soft contrast: background = '#32302f'
+    foreground: '#ebdbb2'
+
+  # Normal colors
+  normal:
+    black: '#282828'
+    red: '#cc241d'
+    green: '#98971a'
+    yellow: '#d79921'
+    blue: '#458588'
+    magenta: '#b16286'
+    cyan: '#689d6a'
+    white: '#a89984'
+
+  # Bright colors
+  bright:
+    black: '#928374'
+    red: '#fb4934'
+    green: '#b8bb26'
+    yellow: '#fabd2f'
+    blue: '#83a598'
+    magenta: '#d3869b'
+    cyan: '#8ec07c'
+    white: '#ebdbb2'
+theme: Gruvbox-Dark
