--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -37,3 +37,16 @@ map ctrl+kp_subtract change_font_size all -2.0
 
 map f11 toggle_fullscreen
 
+# Tab config
+tab_bar_style powerline
+tab_powerline_style round
+tab_bar_margin_width 2.0
+tab_bar_margin_height 0.0 0.0
+# Gruvbox themed colours
+active_tab_foreground   #ebdbb2
+active_tab_background   #d65d0e
+active_tab_font_style   bold-italic
+inactive_tab_foreground #ebdbb2
+inactive_tab_background #282828
+inactive_tab_font_style normal
+tab_bar_background #282828
