--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,9 @@
 #Run tmux source-file /../../.tmux.conf to reload
 
+
 #Set 256 color support
 set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 #Bind prefix to Ctrl+a
 set -g prefix C-a
