--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,6 +79,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'egel/tmux-gruvbox' # Gruvbox color theme
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-yank' # prefix+y to yank into system clipboard
 
 # Plugin options
 set -g @continuum-restore 'on' # Restore tmux sessions on starting it again
