Added tmux keybinds to toggle mouse, useful when deving

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -37,6 +37,10 @@ bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -R
 
+# Toggle mouse on with m/M
+bind m set mouse  \; display 'Mouse: ON'
+bind M set mouse 0\; display 'Mouse: OFF'
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
