--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -1,3 +1,80 @@
+# ===================================================================
+# == Options
+# ===================================================================
+# Which files should be hidden? (regular expression)
+set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
+
+# Show hidden files? You can toggle this by typing 'zh'
+set show_hidden true
+
+# Be aware of version control systems and display information.
+set vcs_aware true
+
+# Use a unicode "..." character to mark cut-off filenames?
+set unicode_ellipsis true
+
 set preview_images true
 
-set draw_borders true
+# Draw borders around columns? (separators, outline, both, or none)
+set draw_borders separators
+
+# Display the directory name in tabs?
+set dirname_in_tabs true
+
+# Enable the mouse support?
+set mouse_enabled true
+
+# Display the file size in the main column or status bar?
+set display_size_in_main_column true
+set display_size_in_status_bar false
+
+# Display the free disk space in the status bar?
+set display_free_space_in_status_bar true
+
+# Display files tags in all columns or only in main column?
+set display_tags_in_all_columns false
+
+# Set a title for the window? Updates both `WM_NAME` and `WM_ICON_NAME`
+set update_title true
+
+# Set the tmux/screen window-name to "ranger"?
+set update_tmux_title true
+
+# Show hostname in titlebar?
+set hostname_in_titlebar false
+
+# Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
+set tilde_in_titlebar true
+
+# Flush the input after each key hit?  (Noticeable when ranger lags)
+set flushinput false
+
+# Changes case sensitivity for the cd command tab completion
+set cd_tab_case insensitive
+
+# Use fuzzy tab completion with the "cd" command. For example,
+# ":cd /u/lo/b<tab>" expands to ":cd /usr/local/bin".
+set cd_tab_fuzzy true
+
+# Possible values: false, absolute, relative.
+set line_numbers relative
+
+set save_tabs_on_exit true
+
+# ===================================================================
+# == Mappings
+# ===================================================================
+
+# Reload config mapings, to reload commands.py, need to restart ranger
+map xx chain shell vi ~/.config/ranger/rc.conf; source ~/.config/ranger/rc.conf
+map xr chain shell vi ~/.config/ranger/rifle.conf; eval fm.rifle.reload_config()
+map xs chain shell vi ~/.config/ranger/scope.sh; source ~/.config/ranger/scope.sh
+
+map gd cd ~/dot-files
+map td tab_new ~/dot-files
+
+# specific for WSL2 setup
+map cd cd /mnt/c/code
+map td tab_new /mnt/c/code
+map gu cd /mnt/c/Users/nerij
+map tu tab_new /mnt/c/Users/nerij
