--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -112,7 +112,8 @@ set $lightgray #bdae93
 
 bar {
     position top
-    status_command i3blocks
+    #status_command i3blocks
+    status_command i3status
     colors {
         # bar background color
         background $bg
