Set i3 nerd font, picom compositor, reenable kitty borders and ranger keymap to change wallpaper

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,7 +22,9 @@ map kitty_mod+a>m set_background_opacity +0.1
 allow_hyperlinks yes
 detect_urls yes
 
-hide_window_decorations yes
+# Looks better without decorations on Windows and Gnome, but better
+# to show decorations on tiling WMs
+hide_window_decorations no
 
 term xterm-256color
 
