--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -73,6 +73,9 @@ map xs chain shell vi ~/.config/ranger/scope.sh; source ~/.config/ranger/scope.s
 map gd cd ~/dot-files
 map td tab_new ~/dot-files
 
+# Set currently highlighter picture as wallpaper using feh
+map ps shell feh --bg-fill %F
+
 # specific for WSL2 setup
 map cd cd /mnt/c/code
 map td tab_new /mnt/c/code
