--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,12 +14,13 @@ set $mod Mod1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 11
-font UbuntuMono Nerd Font 21
+font pango:UbuntuMono Nerd Font 14
+
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 11
-font UbuntuMono Nerd Font 21
+font pango:UbuntuMono Nerd Font 14
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -137,3 +138,6 @@ client.urgent           $red $red $white $red $red
 
 # Set wallpaper on startup using feh
 exec_always feh --bg-fill $HOME/Pictures/wallpaper.png
+# Start compositor to enable things like transparency
+# https://github.com/yshui/picom
+exec_always picom
