--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -3,18 +3,18 @@ window:
     x: 0
     y: 0
 
-  startup_mode: Fullscreen
-  decorations: none
+  #startup_mode: Fullscreen
+  #decorations: none
 
-  opacity: 0.95
+  opacity: 0.9
 
 font:
   normal:
-    family: UbuntuMono Nerd Font Mono
-    style: Bold
+    family: UbuntuMono Nerd Font
+    #style: Bold
   bold:
-    family: UbuntuMono Nerd Font Mono
-    style: Bold
+    family: UbuntuMono Nerd Font
+    #style: Bold
     #italic:
     #family: Ubuntu Mono Nerd Font
     #style: Italic
