--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -34,11 +34,12 @@ markup=none
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=VOL
+#label=VOL
 label=♪
 instance=Master
 #instance=PCM
-interval=once
+interval=1
+#interval=once
 signal=10
 
 # Memory usage
@@ -61,7 +62,8 @@ signal=10
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=HOME
+#label=HOME
+label=
 #instance=/mnt/data
 interval=30
 
