Spruce up urxvt and improve i3 window borders

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -224,6 +224,9 @@ bindsym $mod+r mode "resize"
 
 #######################################
 
+# Change window border styles: pixel|normal|none
+default_border pixel 3
+default_floating_border normal
 
 # # # # # # # # # # # # # # # # # # # #
 # Gruvbox Dark theme
