--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -2,28 +2,23 @@ window:
   padding:
     x: 0
     y: 0
-
   #startup_mode: Fullscreen
   #decorations: none
-
   opacity: 0.85
-
 font:
   normal:
     family: UbuntuMono Nerd Font
-    #style: Bold
+    style: Regular
   bold:
     family: UbuntuMono Nerd Font
-    #style: Bold
-    #italic:
-    #family: Ubuntu Mono Nerd Font
-    #style: Italic
-
+    style: Bold
+  italic:
+    family: UbuntuMono Nerd Font
+    style: Italic
   size: 14.0
-
   offset:
-    x: 0
-    y: 0
+    x: 3
+    y: 3
 
 colors:
   # Default colors
