--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -118,11 +118,12 @@ bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 #bindsym $mod+h split h
-bindsym $mod+- split h
+bindsym $mod+o split h
+#bindsym $mod+- split h
 
 # split in vertical orientation
-bindsym $mod+| split v
-#bindsym $mod+v split v
+#bindsym $mod+| split v
+bindsym $mod+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
