--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -66,10 +66,10 @@ floating_modifier $mod
 
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
-set $up l
-set $down h
-set $left j
-set $right k
+set $up k
+set $down j
+set $left h
+set $right l
 
 #######################################
 #               Keybinds              #
