Add a note in i3 config

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -284,6 +284,7 @@ bar {
         urgent_workspace     $red $red $bg
     }
 }
+# i3bar can also be replaced entirely by something as https://github.com/polybar/polybar for example
 
 # class                 border|backgr|text|indicator|child_border
 client.focused          $lightgray $lightgray $bg $purple $darkgray
