Finer control of volume

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -38,18 +38,20 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+# TODO
 # Tested this way on Ubuntu to control brightness and it works:
 # 1. Find out display name: xrandr | grep " connected" | cut -f1 -d " "
 # 2. Change brightness: xrandr --output displayName --brightness 1.0 (between 0.0 and 1.0)
-
+# For notifications we can use:
+# notify-send -i /path/to/icon/icon.png "Title" "Notification"
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play
