--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -7,15 +7,15 @@ window:
   opacity: 0.85
 font:
   normal:
-    family: UbuntuMono Nerd Font
+    family: UbuntuMono Nerd Font Mono
     style: Regular
   bold:
-    family: UbuntuMono Nerd Font
+    family: UbuntuMono Nerd Font Mono
     style: Bold
   italic:
-    family: UbuntuMono Nerd Font
+    family: UbuntuMono Nerd Font Mono
     style: Italic
-  size: 14.0
+  size: 13.0
   offset:
     x: 3
     y: 3
