--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -44,33 +44,35 @@ font:
     y: 0
 
 colors:
-  name: Color Star
-  author: dkeg
+  # Default colors
   primary:
-    background: "#000000"
-    foreground: "#d3d3d3"
-  cursor:
-    text: "#000000"
-    cursor: "#d3d3d3"
+    hard contrast: background = '#1d2021'
+    background: '#282828'
+    # soft contrast: background = '#32302f'
+    foreground: '#ebdbb2'
+
+  # Normal colors
   normal:
-    black: "#03010f"
-    red: "#503b43"
-    green: "#353b64"
-    yellow: "#8c2424"
-    blue: "#6067ac"
-    magenta: "#624d19"
-    cyan: "#7c83c0"
-    white: "#9a600f"
+    black: '#282828'
+    red: '#cc241d'
+    green: '#98971a'
+    yellow: '#d79921'
+    blue: '#458588'
+    magenta: '#b16286'
+    cyan: '#689d6a'
+    white: '#a89984'
+
+  # Bright colors
   bright:
-    black: "#ab9e9e"
-    red: "#b28930"
-    green: "#bbada9"
-    yellow: "#c37305"
-    blue: "#d0ae58"
-    magenta: "#d7b559"
-    cyan: "#f4e199"
-    white: "#f6f4df"
-theme: Dkeg - colorstar
+    black: '#928374'
+    red: '#fb4934'
+    green: '#b8bb26'
+    yellow: '#fabd2f'
+    blue: '#83a598'
+    magenta: '#d3869b'
+    cyan: '#8ec07c'
+    white: '#ebdbb2'
+theme: Gruvbox-Dark
 
 bell:
   animation: EaseOutExpo
