--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -234,12 +234,12 @@ bindsym $mod+r mode "resize"
 #######################################
 
 # Change window border styles: pixel|normal|none
-default_border pixel 1
+default_border pixel 3
 default_floating_border normal
 
 # i3 v4.22 needed for gap functionality
 gaps outer 2
-gaps inner 2
+gaps inner 3
 smart_gaps inverse_outer
 
 # Mouse moving to other window will not change focus, but you can still
@@ -271,7 +271,7 @@ bar {
     position top
     font pango:UbuntuMono Nerd Font 14
     #status_command i3status
-    status_command i3blocks -c ~/.config/i3/i3blocks.conf
+    status_command SCRIPT_DIR=~/.config/i3/scripts i3blocks -c ~/.config/i3/i3blocks.conf
     # Or using custom status line like bumblebee
     # https://github.com/tobi-wan-kenobi/bumblebee-status
     # Install using: pip install --user bumblebee-status
