Microphone script working for i3blocks

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -39,8 +39,14 @@ label=♪
 instance=Master
 #instance=PCM
 interval=1
-#interval=once
-signal=10
+#interval=onc
+
+[microphone]
+command=$SCRIPT_DIR/microphone
+label=MIC
+interval=10
+#SOURCE=alsa_input.pci-0000_00_1f.3.analog-stereo
+#signal=10
 
 # Memory usage
 #
