Some improvements, but not great not great nerka

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -28,6 +28,15 @@ command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+[mediaplayer]
+instance=spotify
+interval=5
+signal=10
+
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
@@ -43,10 +52,8 @@ interval=1
 
 [microphone]
 command=$SCRIPT_DIR/microphone
-label=MIC
+label=󰍬
 interval=10
-#SOURCE=alsa_input.pci-0000_00_1f.3.analog-stereo
-#signal=10
 
 # Memory usage
 #
@@ -81,7 +88,7 @@ interval=30
 #instance=wlan0
 color=#00FF00
 interval=10
-separator=false
+#separator=false
 
 [wifi]
 #instance=wlp3s0
@@ -118,16 +125,9 @@ interval=30
 #
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
+# TODO: fix this mess, had to increase min_width because tray icons hid half of time block
+min_width=2023-01-01:12:00:00______________
 interval=1
-
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
-instance=spotify
-interval=5
-signal=10
 
 # OpenVPN support
 #
