i3 use just icons on workspaces to conserve space

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -156,16 +156,16 @@ bindsym $mod+minus scratchpad show
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1: Term "
-set $ws2 "2: WWW "
-set $ws3 "3: Slack 󰭺"
-set $ws4 "4: "
+set $ws1 "1: "
+set $ws2 "2: "
+set $ws3 "3: "
+set $ws4 "4: 󰭺"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
-set $ws10 "0: Music 󰎈"
+set $ws10 "0: 󰎈"
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -194,7 +194,8 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 # Assign different programs to particular workspaces
 # To find windows class, use xprop utility and click on program
 assign [ class = "kitty" ] $ws1
-assign [ class = "Slack" ] $ws3
+assign [ class = "Google-chrome" ] $ws2
+assign [ class = "Slack" ] $ws4
 assign [ class = "Spotify" ] $ws10
 # "Google-chrome"
 # "firefox"
