--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -56,9 +56,9 @@ font-3 = UbuntuMono Nerd Font:style=Regular:size=15;5
 font-4 = UbuntuMono Nerd Font:style=Regular:size=13;4
 
 ;modules-center = workspaces
+modules-center = title
 ;modules-left = launcher i3
 modules-right = right7 pulseaudio microphone-recording microphone-mute right6 network right5 battery right4 filesystem right3 temperature right2 date right1
-;modules-right = right8 title right7 pulseaudio microphone-recording microphone-mute right6 network right5 battery right4 filesystem right3 temperature right2 date right1
 
 wm-restack = i3
 cursor-click = pointer
@@ -72,15 +72,15 @@ dim-value = 1.0
 wm-name =
 locale =
 
-tray-position = right
-tray-detached = false
-tray-maxsize = 32
-tray-transparent = false
-tray-background = ${color.background}
-tray-offset-x = 0
-tray-offset-y = 0
-tray-padding = 6
-tray-scale = 1.0
+;tray-position = right
+;tray-detached = false
+;tray-maxsize = 32
+;tray-transparent = false
+;tray-background = ${color.background}
+;tray-offset-x = 0
+;tray-offset-y = 0
+;tray-padding = 6
+;tray-scale = 1.0
 
 enable-ipc = true
 
