Add icon for cpu in i3blocks config

--- a/i3blocks/.config/i3blocks/config
+++ b/i3blocks/.config/i3blocks/config
@@ -108,9 +108,10 @@ separator=false
 # see the script for details.
 [cpu_usage]
 label=CPU
+label=󰘚
 interval=10
 align=center
-min_width=CPU: 10.00%
+min_width=󰘚 10.00%
 #min_width=CPU: 100.00%
 #separator=false
 
