--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -196,7 +196,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 
 # Assign different programs to particular workspaces
 # To find windows class, use xprop utility and click on program
-assign [ class = "kitty" ] $ws1
+#assign [ class = "kitty" ] $ws1
 assign [ class = "Google-chrome" ] $ws2
 assign [ class = "Slack" ] $ws4
 assign [ class = "Spotify" ] $ws10
