--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -198,7 +198,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 # To find windows class, use xprop utility and click on program
 #assign [ class = "kitty" ] $ws1
 assign [ class = "Google-chrome" ] $ws2
-assign [ class = "Slack" ] $ws4
+assign [ class = "Slack" ] $ws5
 assign [ class = "Spotify" ] $ws10
 # "Google-chrome"
 # "firefox"
@@ -271,7 +271,8 @@ set $white #ebdbb2
 set $orange #fe8019
 
 # Lock screen
-bindsym $mod+Shift+x exec i3lock --color "$bg"
+#bindsym $mod+Shift+x exec i3lock --color "$bg"
+bindsym $mod+Shift+x exec ~/dot-files/scripts/i3lock.sh
 
 bar {
     position top
