--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -49,15 +49,15 @@ padding = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = UbuntuMono Nerd Font:style=Regular:size=16;4
-font-1 = UbuntuMono Nerd Font:style=Regular:size=14;4
-font-2 = UbuntuMono Nerd Font:style=Bold:size=14;4
-font-3 = UbuntuMono Nerd Font:style=Regular:size=15;5
-font-4 = UbuntuMono Nerd Font:style=Regular:size=13;4
+font-0 = UbuntuMono Nerd Font Mono:style=Regular:size=16;4
+font-1 = UbuntuMono Nerd Font Mono:style=Regular:size=14;4
+font-2 = UbuntuMono Nerd Font Mono:style=Bold:size=14;4
+font-3 = UbuntuMono Nerd Font Mono:style=Regular:size=15;5
+font-4 = UbuntuMono Nerd Font Mono:style=Regular:size=13;4
 
 ;modules-center = workspaces
 modules-center = title
-;modules-left = launcher i3
+modules-left = launcher i3 spotify
 modules-right = right7 pulseaudio microphone-recording microphone-mute right6 network right5 battery right4 filesystem right3 temperature right2 date right1
 
 wm-restack = i3
