--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -57,8 +57,8 @@ font-4 = UbuntuMono Nerd Font Mono:style=Regular:size=13;4
 
 ;modules-center = workspaces
 modules-center = title
-modules-left = launcher i3 spotify
-modules-right = right7 pulseaudio microphone-recording microphone-mute right6 network right5 battery right4 filesystem right3 temperature right2 date right1
+modules-left = launcher left3 i3 left2 spotify left1
+modules-right = pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right3 temperature right2 date right1
 
 wm-restack = i3
 cursor-click = pointer
