--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -72,15 +72,15 @@ dim-value = 1.0
 wm-name =
 locale =
 
-;tray-position = right
-;tray-detached = false
-;tray-maxsize = 32
-;tray-transparent = false
-;tray-background = ${color.background}
-;tray-offset-x = 0
-;tray-offset-y = 0
-;tray-padding = 6
-;tray-scale = 1.0
+tray-position = right
+tray-detached = false
+tray-maxsize = 32
+tray-transparent = false
+tray-background = ${color.background}
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 6
+tray-scale = 1.0
 
 enable-ipc = true
 
