--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -91,6 +91,12 @@ bindsym $mod+d exec "rofi -modi drun,run -show drun -opacity '85' -font 'UbuntuM
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
+# Screenshot of selected area
+bindsym Print exec --no-startup-id maim -u -s ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png"| xclip -sel c -t image/png
+# Screenshot of entire window
+bindsym $mod+Print exec --no-startup-id maim -u --window $(xdotool getactivewindow) | tee ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png" | xclip -sel c -t image/png
+# TODO: another shortcut for entire screen
+
 # change focus
 bindsym $mod+$left focus left
 bindsym $mod+$right focus right
