Add working brightness control to polybar! Still need to sort out i3 side of things to control via keyboard

--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -58,7 +58,7 @@ font-4 = UbuntuMono Nerd Font Mono:style=Regular:size=13;4
 ;modules-center = workspaces
 modules-center = title
 modules-left = launcher left1 i3 left2 spotify left4
-modules-right = right8 pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right3 temperature right2 date right1
+modules-right = right8 backlight pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right3 temperature right2 date right1
 
 wm-restack = i3
 cursor-click = pointer
