--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -208,8 +208,9 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 # To find windows class, use xprop utility and click on program
 #assign [ class = "kitty" ] $ws1
 assign [ class = "Google-chrome" ] $ws2
-assign [ class = "Slack" ] $ws5
+assign [ class = "Slack" ] $ws4
 assign [ class = "Spotify" ] $ws10
+assign [ class = "spotify" ] $ws10
 # "Google-chrome"
 # "firefox"
 # "jetbrains-phpstorm"
