Compiled latest version of polybar, now 3.6.0 is required, network module working, all is dandy

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -248,6 +248,9 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+# Wifi popup always floating
+for_window [class="Nm-connection-editor"] floating enable
+
 #######################################
 
 # Change window border styles: pixel|normal|none
