--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -56,9 +56,9 @@ font-3 = UbuntuMono Nerd Font Mono:style=Regular:size=15;5
 font-4 = UbuntuMono Nerd Font Mono:style=Regular:size=13;4
 
 ;modules-center = workspaces
-modules-left = launcher left1 i3 left2 spotify network
+modules-left = launcher left1 i3 left2 spotify
 modules-center = right8 title left4
-modules-right = backlight pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right3 temperature right2 date right1
+modules-right = backlight pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right6 network right3 temperature right2 date right1
 
 wm-restack = i3
 cursor-click = pointer
