--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -44,13 +44,9 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Sreen brightness controls
-#bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-#bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
-# This requires brightnessctl to be installed though, not sure why xbacklight isn't working
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl --min-val=2 -q set 3%-
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl -q set 3%+
+bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
+bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5
 
-# TODO
 # Tested this way on Ubuntu to control brightness and it works:
 # 1. Find out display name: xrandr | grep " connected" | cut -f1 -d " "
 # 2. Change brightness: xrandr --output displayName --brightness 1.0 (between 0.0 and 1.0)
@@ -96,10 +92,14 @@ bindsym $mod+d exec --no-startup-id ~/.config/rofi/launchers/type-3/launcher.sh
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
+# Power menu
+bindsym $mod+Shift+p exec --no-startup-id ~/.config/rofi/powermenu/type-6/powermenu.sh
+
 # Screenshot of selected area
 bindsym Print exec --no-startup-id maim -u -s ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png"| xclip -sel c -t image/png
 # Screenshot of entire window
 bindsym $mod+Print exec --no-startup-id maim -u --window $(xdotool getactivewindow) | tee ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png" | xclip -sel c -t image/png
+bindsym $mod+p exec --no-startup-id maim -u --window $(xdotool getactivewindow) | tee ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png" | xclip -sel c -t image/png
 # TODO: another shortcut for entire screen
 
 # change focus
