--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -57,7 +57,7 @@ font-4 = UbuntuMono Nerd Font Mono:style=Regular:size=13;4
 
 ;modules-center = workspaces
 modules-left = launcher left1 i3 left2 spotify
-modules-center = right8 title left4
+;modules-center = right8 title left4
 modules-right = backlight pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right6 network right3 temperature right2 date right1
 
 wm-restack = i3
@@ -72,15 +72,16 @@ dim-value = 1.0
 wm-name =
 locale =
 
-tray-position = right
-tray-detached = false
-tray-maxsize = 32
-tray-transparent = false
-tray-background = ${color.background}
-tray-offset-x = 0
-tray-offset-y = 0
-tray-padding = 6
-tray-scale = 1.0
+; DO WE WANT A TRAY???
+;tray-position = right
+;tray-detached = false
+;tray-maxsize = 32
+;tray-transparent = false
+;tray-background = ${color.background}
+;tray-offset-x = 0
+;tray-offset-y = 0
+;tray-padding = 6
+;tray-scale = 1.0
 
 enable-ipc = true
 
