--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -96,11 +96,11 @@ bindsym $mod+d exec --no-startup-id ~/.config/rofi/launchers/type-6/launcher.sh
 bindsym $mod+Shift+p exec --no-startup-id ~/.config/rofi/powermenu/type-6/powermenu.sh
 
 # Screenshot of selected area
-bindsym Print exec --no-startup-id maim -u -s ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png"| xclip -sel c -t image/png
+#bindsym Print exec --no-startup-id maim -u -s | tee ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png"| xclip -sel c -t image/png
 # Screenshot of entire window
-bindsym $mod+Print exec --no-startup-id maim -u --window $(xdotool getactivewindow) | tee ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png" | xclip -sel c -t image/png
-bindsym $mod+p exec --no-startup-id maim -u --window $(xdotool getactivewindow) | tee ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png" | xclip -sel c -t image/png
-# TODO: another shortcut for entire screen
+#bindsym $mod+Print exec --no-startup-id maim -u --window $(xdotool getactivewindow) | tee ~/Pictures/screenshot-"$(date '+%y%m%d-%H%M-%S').png" | xclip -sel c -t image/png
+# Instead of specific bindings we open screenshot dialog
+bindsym Print exec --no-startup-id ~/.config/rofi/applets/bin/screenshot.sh
 
 # change focus
 bindsym $mod+$left focus left
