--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -54,11 +54,13 @@ font-1 = UbuntuMono Nerd Font Mono:style=Regular:size=14;4
 font-2 = UbuntuMono Nerd Font Mono:style=Bold:size=14;4
 font-3 = UbuntuMono Nerd Font Mono:style=Regular:size=15;5
 font-4 = UbuntuMono Nerd Font Mono:style=Regular:size=13;4
+;font-5 = "Noto Color Emoji:pixelsize=16:style=Regular;2:scale=10"
+font-5 = "NotoEmoji:scale=10"
 
 ;modules-center = workspaces
 modules-left = launcher left1 i3 left2 spotify
 ;modules-center = right8 title left4
-modules-right = keyboard backlight pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right6 network right3 temperature right2 date right1 power
+modules-right = weather keyboard backlight pulseaudio microphone-recording microphone-mute right5 battery right4 filesystem right6 network right3 temperature right2 date right1 power
 
 wm-restack = i3
 cursor-click = pointer
