--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -49,9 +49,9 @@ padding = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = UbuntuMono Nerd Font Mono:style=Regular:size=15;4
-font-1 = UbuntuMono Nerd Font Mono:style=Regular:size=14;4
-font-2 = "NotoEmoji:scale=10:style=Regular:size=15"
+font-0 = UbuntuMono Nerd Font Mono:style=Regular:size=16;4
+font-1 = UbuntuMono Nerd Font Mono:style=Regular:size=16;4
+font-2 = NotoEmoji:scale=10:style=Regular:size=15;4
 ;font-3 = "Noto Color Emoji:pixelsize=16:style=Regular;2:scale=10"
 
 ;modules-center = workspaces
