--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -209,11 +209,10 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 # To find windows class, use xprop utility and click on program
 #assign [ class = "kitty" ] $ws1
 assign [ class = "Google-chrome" ] $ws2
+assign [ class = "firefox" ] $ws2
 assign [ class = "Slack" ] $ws4
 assign [ class = "Spotify" ] $ws10
 assign [ class = "spotify" ] $ws10
-# "Google-chrome"
-# "firefox"
 # "jetbrains-phpstorm"
 
 # reload the configuration file
