Add ranger devicon plugin! Some sexy icons for different file types

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -61,6 +61,9 @@ set line_numbers relative
 
 set save_tabs_on_exit true
 
+# Enable ranger devicons plugin
+default_linemode devicons
+
 # ===================================================================
 # == Mappings
 # ===================================================================
