--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ tmux/.tmux/plugins/*
 !tmux/.tmux/plugins/tpm
 
 nvim/.config/nvim/plugin/packer_compiled.lua
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
